1 more time update

--- a/root/index.html
+++ b/root/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Lenis, infinite scrolling, loop scrolling, javascript, continuous scrolling" />
     <meta name="author" content="thesimoneliu" />
     <link rel="shortcut icon" href="https://tympanus.net/Sketches/favicon.ico" />
-    <link rel="stylesheet" type="text/css" href="./css/base.css" />
+    <link rel="stylesheet" type="text/css" href="./styles/base.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
     <script src="https://unpkg.com/imagesloaded@5/imagesloaded.pkgd.min.js"></script>
@@ -16,9 +16,9 @@
   </head>
   <body class="loading">
     <main>
-      <div class="frame">
-        <h1 class="frame__title">Sketch 001: Flip Book</h1>
-        <nav class="frame__links">
+      <div class="header">
+        <h1 class="header__title">Sketch 001: Flip Book</h1>
+        <nav class="header__links">
           <a href="">GitHub</a>
           <a href="https://thesimoneliu.com">Portfolio</a>
         </nav>
@@ -26,6 +26,6 @@
       <div class="sketch"></div>
     </main>
 
-    <script src="js/index.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
