--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <meta name="keywords" content="Lenis, infinite scrolling, loop scrolling, javascript, continuous scrolling" />
     <meta name="author" content="thesimoneliu" />
     <link rel="shortcut icon" href="https://tympanus.net/Sketches/favicon.ico" />
-    <link rel="stylesheet" type="text/css" href="./styles/base.css" />
+    <link rel="stylesheet" type="text/css" href="./root/styles/base.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
     <script src="https://unpkg.com/imagesloaded@5/imagesloaded.pkgd.min.js"></script>
-    <!-- <script src="'./js/loading.js"></script> -->
+    <!-- <script src="./root/js/loading.js"></script> -->
   </head>
   <body class="loading">
     <main>
@@ -26,6 +26,6 @@
       <div class="sketch"></div>
     </main>
 
-    <script src="./js/index.js"></script>
+    <script src="./root/js/index.js"></script>
   </body>
 </html>
